# transformerLM

./: .gitignore  README.md  infer_transformer.py  make_data.py  pyproject.toml  pytest.ini  tokenizer.py  tokenizer_utils.py  train_tokenizer.py  train_transformer.py  train_transformer.sh  wandb_sweep.yaml
benchmarking/: __init__.py  bench_infer_latency.py  bench_tokenizer.py  common.py
cli/: infer.py  make_data.py  train.py  train_tokenizer.py  utils.py
config/: __init__.py  bench_infer.py  bench_tokenizer.py  infer.py  io.py  schemas.py  train.py  validate.py
config/resources/: .gitkeep  bench_infer.toml  bench_tokenizer.toml  infer.toml  train_tokenizer.toml
config/resources/wandb/: train_sweep.yaml
configs/: bench_infer.toml  make_data.toml  train.toml
databuilder/: dataset_builder.py
logger/: __init__.py  console_logger.py  noop.py  wandb_logger.py
profiling/: memory.py  nvtx.py
scripts/: infer_transformer.sh  make_data.sh  train_tokenizer.sh  train_transformer.sh
tests/: conftest.py
tests/config/: test_config.py
tests/tokenizer/: test_tokenizer.py
tests/transformer/: test_attention.py  test_layers.py  test_lm.py
tests/utils/: test_train_utils.py
transformerlm/: __init__.py  config.py
transformerlm/cli/: __init__.py  infer.py  make_data.py  train.py  train_tokenizer.py
transformerlm/data/: dataset_builder.py  make_data.py
transformerlm/inference/: __init__.py  generate.py  infer_transformer.py  predictor.py  sampling.py
transformerlm/logging/: __init__.py  base.py  noop.py
transformerlm/models/: __init__.py  attention.py  layers.py  transformer.py
transformerlm/tokenizer/: __init__.py  bpe_trainer.py  io.py  pretokenize.py  tokenizer.py  tokenizer_utils.py  train_tokenizer.py
transformerlm/training/: __init__.py  checkpoint.py  data.py  grad.py  loop.py  loss.py  optim.py  schedule.py  train_transformer.py  trainer.py
transformerlm/transformer/: __init__.py  train_transformer.py  train_transformer_utils.py  transformer_lm.py
transformerlm/utils/: dtypes.py
