[project]
name = "transformerlm"
version = "1.0.0"
description = "A from scratch implementation of a Transformer Language Model"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "pytest>=8.3.4",
    "jaxtyping>=0.3.0",
    "torch",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "einops>=0.8.1",
    "regex>=2024.11.6",
]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]

[project.scripts]
transformerlm-train = "transformerlm.cli.train:main"
transformerlm-infer = "transformerlm.cli.infer:main"
transformerlm-make-data = "transformerlm.cli.make_data:main"
transformerlm-train-tokenizer = "transformerlm.cli.train_tokenizer:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["transformerlm*"]
exclude = [
  "tests*",
  "runs*",
  "todo*",
  "wandb*",
  "configs*",
  "scripts*",
  "data*",
  ".venv*",
  ".*",
]

[tool.pytest.ini_options]
addopts = ["-q"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: requires CUDA/GPU",
]
